--- a/4-portfolio-react/public/index.html
+++ b/4-portfolio-react/public/index.html
@@ -7,6 +7,7 @@
     <title>Personal Portfolio</title>
     <script src="https://kit.fontawesome.com/aa6c6f4b76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div id="root"></div>
